--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@sanity/image-url": "^1.0.1",
     "next": "12.3.0",
     "next-sanity": "^0.8.4",
+    "next-sitemap": "^3.1.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-portable-text": "^0.5.1",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "react-simple-typewriter": "^4.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.10",
