--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "@sanity/image-url": "^1.0.1",
     "next": "12.3.0",
     "next-sanity": "^0.8.4",
-    "next-sitemap": "^3.1.22",
+    "next-sitemap": "^3.1.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
